More validations added
1. Readout Delivery Status
2. Reason Declined

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -164,13 +164,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Readout delivery status\n",
+    "\n",
+    "del_status = df_compass[['Request ID', 'Date Readout Done', 'Readout Delivery Status']].copy()\n",
+    "\n",
+    "for id, row in del_status.iterrows():\n",
+    "    if pd.isna(row['Date Readout Done']) == False and pd.isna(row['Readout Delivery Status']) == True:\n",
+    "        del_status.loc[id, 'Readout Delivery Status'] = 'Empty value'\n",
+    "    else:\n",
+    "        del_status.loc[id, 'Readout Delivery Status'] = None\n",
+    "\n",
+    "del_status.dropna(axis=0, subset=['Readout Delivery Status'], inplace=True)\n",
+    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reason Declined\n",
+    "\n",
+    "res_declined = df_compass[['Request ID', 'Readout Delivery Status', 'Reason Declined']].copy()\n",
+    "\n",
+    "for id, row in res_declined.iterrows():\n",
+    "    if row['Readout Delivery Status'] == 'Declined' and pd.isna(row['Reason Declined']) == True:\n",
+    "        res_declined.loc[id, 'Reason Declined'] = 'Empty value'\n",
+    "    else:\n",
+    "        res_declined.loc[id, 'Reason Declined'] = None\n",
+    "\n",
+    "res_declined.dropna(axis=0, subset=['Reason Declined'], inplace=True)\n",
+    "res_declined.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Merge\n",
     "\n",
-    "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID')"
+    "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(    \n",
+    "                del_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "                res_declined, how='outer', left_on='Request ID', right_on='Request ID')\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_report"
    ]
   },
   {
