Modify Reason Declined validation code.
-It was added the validations for 'items recommended' column

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -188,17 +188,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reason Declined\n",
+    "# Reason Declined // Item recommended\n",
     "\n",
-    "res_declined = df_compass[['Request ID', 'Readout Delivery Status', 'Reason Declined']].copy()\n",
+    "res_declined = df_compass[['Request ID', 'Readout Delivery Status', 'Reason Declined', 'Items Recommended']].copy()\n",
     "\n",
     "for id, row in res_declined.iterrows():\n",
     "    if row['Readout Delivery Status'] == 'Declined' and pd.isna(row['Reason Declined']) == True:\n",
     "        res_declined.loc[id, 'Reason Declined'] = 'Empty value'\n",
+    "    elif (row['Readout Delivery Status'] == 'Complete' or row['Readout Delivery Status'] == 'Emailed Recommendations') and pd.isna(row['Items Recommended']) == True:\n",
+    "        res_declined.loc[id, 'Items Recommended'] = 'Empty value'\n",
     "    else:\n",
     "        res_declined.loc[id, 'Reason Declined'] = None\n",
+    "        res_declined.loc[id, 'Items Recommended'] = None\n",
     "\n",
-    "res_declined.dropna(axis=0, subset=['Reason Declined'], inplace=True)\n",
+    "res_declined.dropna(axis=0, how='all', subset=['Reason Declined', 'Items Recommended'], inplace=True)\n",
     "res_declined.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
    ]
   },
