New error validations
1. Mayor Renewal QTR
2. Date presentation Created (pending for comparison with date readout
   column)

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -41,10 +41,10 @@
    "outputs": [],
    "source": [
     "#import data\n",
-    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Daily%20CAB%20Tracker.xlsx\"\\\n",
-    "    ,filename = 'Daily CAB Tracker.xlsx')\n",
+    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Daily%20CAB%20Tracker.xlsx\",\n",
+    "              filename='Daily CAB Tracker.xlsx')\n",
     "df_compass = pd.read_excel('Daily CAB Tracker.xlsx', sheet_name='Tracker')\n",
-    "df_compass.dropna(axis=0, how='all', subset=['Request ID', 'Customer Name'], inplace=True)"
+    "df_compass.dropna(axis=0, how='all', subset=['Request ID', 'Customer Name'], inplace=True)\n"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SMTP Mail variables\n",
+    "# SMTP Mail variables\n",
     "today = datetime.strftime(datetime.today(), '%m-%d-%Y')\n",
     "myMail = 'testNub78@outlook.com'\n",
     "password = 'EasyP4ssword78'\n",
@@ -62,7 +62,7 @@
     "msg1 = \"\"\"<h3>Hola, %s</h3>\n",
     "        <p><span style=\"color: rgb(71, 85, 119);\">Parece que tienes varios errores en la informaci&oacute;n registrada en tus cuentas.</span></p>\n",
     "        <p><span style=\"color: rgb(71, 85, 119);\">Asegurate de revisar el archivo adjunto para validar los campos que est&aacute;n generando conflictos.</span></p>\n",
-    "        <p><span style=\"color: rgb(71, 85, 119);\">Feliz D&iacute;a.</span></p>\"\"\""
+    "        <p><span style=\"color: rgb(71, 85, 119);\">Feliz D&iacute;a.</span></p>\"\"\"\n"
    ]
   },
   {
@@ -74,22 +74,23 @@
     "def format_date_column(serie):\n",
     "    format_date = []\n",
     "    for index, value in serie.iteritems():\n",
-    "        if type(value) != datetime and type(value) != Timestamp:  \n",
+    "        if type(value) != datetime and type(value) != Timestamp:\n",
     "            if pd.isnull(value) or value != value:\n",
-    "                #Fechas vacias\n",
-    "                value = datetime.strptime('2030-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "                # Fechas vacias\n",
+    "                value = datetime.strptime(\n",
+    "                    '2030-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
-    "            else: \n",
-    "                #Error de formato\n",
-    "                value = datetime.strptime('2050-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
+    "            else:\n",
+    "                # Error de formato\n",
+    "                value = datetime.strptime(\n",
+    "                    '2050-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
     "        else:\n",
-    "            #Fechas normales\n",
+    "            # Fechas normales\n",
     "            value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
     "            format_date.append(value)\n",
-    "    \n",
-    "    return format_date\n",
-    "    "
+    "\n",
+    "    return format_date\n"
    ]
   },
   {
@@ -170,7 +171,8 @@
    "source": [
     "# Readout delivery status\n",
     "\n",
-    "del_status = df_compass[['Request ID', 'Date Readout Done', 'Readout Delivery Status']].copy()\n",
+    "del_status = df_compass[['Request ID',\n",
+    "                         'Date Readout Done', 'Readout Delivery Status']].copy()\n",
     "\n",
     "for id, row in del_status.iterrows():\n",
     "    if pd.isna(row['Date Readout Done']) == False and pd.isna(row['Readout Delivery Status']) == True:\n",
@@ -179,7 +181,7 @@
     "        del_status.loc[id, 'Readout Delivery Status'] = None\n",
     "\n",
     "del_status.dropna(axis=0, subset=['Readout Delivery Status'], inplace=True)\n",
-    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)\n"
    ]
   },
   {
@@ -190,7 +192,8 @@
    "source": [
     "# Reason Declined // Item recommended\n",
     "\n",
-    "res_declined = df_compass[['Request ID', 'Readout Delivery Status', 'Reason Declined', 'Items Recommended']].copy()\n",
+    "res_declined = df_compass[['Request ID', 'Readout Delivery Status',\n",
+    "                           'Reason Declined', 'Items Recommended']].copy()\n",
     "\n",
     "for id, row in res_declined.iterrows():\n",
     "    if row['Readout Delivery Status'] == 'Declined' and pd.isna(row['Reason Declined']) == True:\n",
@@ -201,8 +204,42 @@
     "        res_declined.loc[id, 'Reason Declined'] = None\n",
     "        res_declined.loc[id, 'Items Recommended'] = None\n",
     "\n",
-    "res_declined.dropna(axis=0, how='all', subset=['Reason Declined', 'Items Recommended'], inplace=True)\n",
-    "res_declined.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+    "res_declined.dropna(axis=0, how='all', subset=[\n",
+    "                    'Reason Declined', 'Items Recommended'], inplace=True)\n",
+    "res_declined.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mayor Renewal QTR\n",
+    "\n",
+    "ren_qtr = df_compass[['Request ID', 'Major Renewal QTR', 'Date Presentation Created']] \n",
+    "ren_qtr = ren_qtr[pd.isna(ren_qtr['Major Renewal QTR']) & pd.notna(ren_qtr['Date Presentation Created'])]\n",
+    "ren_qtr.fillna('Empty value', inplace=True)\n",
+    "ren_qtr.drop(axis=1, columns='Date Presentation Created', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date presentation Created\n",
+    "# Note: The column date readout done do not have the correct format (it's string)\n",
+    "\n",
+    "pre_created = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Presentation Created']].copy()\n",
+    "pre_created['Date Advisor Assigned'] = format_date_column(pre_created['Date Advisor Assigned']) \n",
+    "pre_created['Date Presentation Created'] = format_date_column(pre_created['Date Presentation Created']) \n",
+    "pre_created = pre_created[(pre_created['Date Presentation Created'] < pre_created['Date Advisor Assigned'])]\n",
+    "pre_created.drop(labels=pre_created[pre_created['Date Advisor Assigned'] == '2030-02-02'].index, axis=0, inplace=True)\n",
+    "pre_created.drop(labels=pre_created[pre_created['Date Advisor Assigned'] == '2050-02-02'].index, axis=0, inplace=True)\n",
+    "pre_created['Date Presentation Created'] = 'Date Advisor Assigned is greater'\n",
+    "pre_created.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
    ]
   },
   {
@@ -213,10 +250,11 @@
    "source": [
     "# Merge\n",
     "\n",
-    "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(    \n",
-    "                del_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "                res_declined, how='outer', left_on='Request ID', right_on='Request ID')\n",
-    "                "
+    "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    del_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    res_declined, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    ren_qtr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    pre_created, how='outer', left_on='Request ID', right_on='Request ID')\n"
    ]
   },
   {
