New error validation
1. Presentation Creation Time (min)
2. Readout Duration (min)

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -248,13 +248,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Presentation Creation Time (min)\n",
+    "\n",
+    "pre_created_tim = df_compass[['Request ID', 'Date Presentation Created', 'Presentation Creation Time (min)']].copy()\n",
+    "pre_created_tim = pre_created_tim[(pd.notna(pre_created_tim['Date Presentation Created'])) & (pd.isna(pre_created_tim['Presentation Creation Time (min)']))]\n",
+    "pre_created_tim['Presentation Creation Time (min)'] = 'Empty value'\n",
+    "pre_created_tim.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Readout Duration (min)\n",
+    "\n",
+    "re_duration_m = df_compass[['Request ID', 'Readout Delivery Status', 'Readout Duration (min)']].copy()\n",
+    "re_duration_m = re_duration_m[(re_duration_m['Readout Delivery Status'] == 'Complete') | (re_duration_m['Readout Delivery Status'] == 'Emailed Recommendations')]\n",
+    "re_duration_m = re_duration_m[pd.isna(re_duration_m['Readout Duration (min)'])]\n",
+    "re_duration_m['Readout Duration (min)'] = 'Empty value'\n",
+    "re_duration_m.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merge\n",
     "\n",
     "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    del_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    res_declined, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    ren_qtr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    pre_created, how='outer', left_on='Request ID', right_on='Request ID')\n"
+    "    pre_created, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    pre_created_tim, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    re_duration_m, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
