New errors validations
1. Date Invite Sent
2. Date Summary Sent (only the space with no code)
3. IB value (in M) // Cover the Uncovered Presented
4. AT Interested (CTU)

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,15 +277,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge\n",
+    "# Date Invite Sent\n",
     "\n",
-    "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    del_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    res_declined, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    ren_qtr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    pre_created, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    pre_created_tim, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    re_duration_m, how='outer', left_on='Request ID', right_on='Request ID')"
+    "dat_invite_s = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Invite Sent']].copy()\n",
+    "dat_invite_s['Date Advisor Assigned'] = format_date_column(dat_invite_s['Date Advisor Assigned']) \n",
+    "dat_invite_s['Date Invite Sent'] = format_date_column(dat_invite_s['Date Invite Sent'])\n",
+    "dat_invite_s = dat_invite_s[dat_invite_s['Date Advisor Assigned'] > dat_invite_s['Date Invite Sent']]\n",
+    "dat_invite_s.drop(labels=dat_invite_s[dat_invite_s['Date Advisor Assigned'] == '2030-02-02'].index, axis=0, inplace=True)\n",
+    "dat_invite_s.drop(labels=dat_invite_s[dat_invite_s['Date Advisor Assigned'] == '2050-02-02'].index, axis=0, inplace=True)\n",
+    "dat_invite_s['Date Invite Sent'] = 'Date Advisor Assigned greater'\n",
+    "dat_invite_s.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
    ]
   },
   {
@@ -294,7 +295,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_report"
+    "# Date Summary Sent\n",
+    "# En pausa dado que la columna readout done tiene formato string"
    ]
   },
   {
@@ -302,7 +304,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# IB value (in M) // Cover the Uncovered Presented\n",
+    "\n",
+    "ibvalue_and_cover = df_compass[['Request ID', 'Date Presentation Created', 'IB value (in M)', 'Cover the Uncovered Presented']].copy()\n",
+    "ibvalue_and_cover = ibvalue_and_cover[pd.notna(ibvalue_and_cover['Date Presentation Created'])]\n",
+    "ibvalue_and_cover = ibvalue_and_cover[(pd.isna(ibvalue_and_cover['IB value (in M)'])) | (pd.isna(ibvalue_and_cover['Cover the Uncovered Presented']))]\n",
+    "ibvalue_and_cover.fillna('Empty value', inplace=True)\n",
+    "ibvalue_and_cover['Cover the Uncovered Presented'] = ibvalue_and_cover['Cover the Uncovered Presented'].apply(\n",
+    "    lambda x: None if x != 'Empty value' else x)\n",
+    "ibvalue_and_cover['IB value (in M)'] = ibvalue_and_cover['IB value (in M)'].apply(\n",
+    "    lambda x: None if x != 'Empty value' else x)\n",
+    "ibvalue_and_cover.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AT Interested (CTU)\n",
+    "\n",
+    "at_interested = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (CTU)']].copy()\n",
+    "at_interested = at_interested[(at_interested['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested['AT Interested (CTU)'])]\n",
+    "at_interested['AT Interested (CTU)'] = 'Empty value'\n",
+    "at_interested.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge\n",
+    "\n",
+    "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    del_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    res_declined, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    ren_qtr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    pre_created, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    pre_created_tim, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    re_duration_m, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    dat_invite_s, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    ibvalue_and_cover, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested, how='outer', left_on='Request ID', right_on='Request ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_report[final_report['Request ID'].duplicated()]"
+   ]
   }
  ],
  "metadata": {
