New error validations added
1. Uplift to SSPT Presented
2. AT Interested (SSPT)
3. DNA with success tracks Level 2 Presented
4. AT Interested (ST)
5. SW Support Presented
6. AT Interested (SW)

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -339,6 +339,196 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uplift to SSPT In Pursue\n",
+    "\n",
+    "up_sspt = df_compass[['Request ID', 'Date Presentation Created', 'Uplift to SSPT In Pursue']].copy()\n",
+    "up_sspt = up_sspt[pd.notna(up_sspt['Date Presentation Created'])]\n",
+    "up_sspt = up_sspt[pd.isna(up_sspt['Uplift to SSPT In Pursue'])]\n",
+    "up_sspt['Uplift to SSPT In Pursue'] = 'Empty value'\n",
+    "up_sspt.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AT Interested (SSPT)\n",
+    "\n",
+    "at_interested_sspt = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (SSPT)']].copy()\n",
+    "at_interested_sspt = at_interested_sspt[(at_interested_sspt['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested_sspt['AT Interested (SSPT)'])]\n",
+    "at_interested_sspt['AT Interested (SSPT)'] = 'Empty value'\n",
+    "at_interested_sspt.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DNA with Success Tracks Level 2 Presented\n",
+    "\n",
+    "dna_presented = df_compass[['Request ID', 'Date Presentation Created', 'DNA with Success Tracks Level 2 Presented']].copy()\n",
+    "dna_presented = dna_presented[pd.notna(dna_presented['Date Presentation Created'])]\n",
+    "dna_presented = dna_presented[pd.isna(dna_presented['DNA with Success Tracks Level 2 Presented'])]\n",
+    "dna_presented['DNA with Success Tracks Level 2 Presented'] = 'Empty value'\n",
+    "dna_presented.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AT Interested (ST)\n",
+    "\n",
+    "at_interested_st = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (ST)']].copy()\n",
+    "at_interested_st = at_interested_st[(at_interested_st['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested_st['AT Interested (ST)'])]\n",
+    "at_interested_st['AT Interested (ST)'] = 'Empty value'\n",
+    "at_interested_st.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Request ID</th>\n",
+       "      <th>SW Support Presented</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>102669.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>102622.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>102621.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>102620.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>102619.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20927</th>\n",
+       "      <td>117166.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20934</th>\n",
+       "      <td>117159.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20941</th>\n",
+       "      <td>117152.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20965</th>\n",
+       "      <td>117128.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20979</th>\n",
+       "      <td>118234.0</td>\n",
+       "      <td>Empty value</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3240 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Request ID SW Support Presented\n",
+       "58       102669.0          Empty value\n",
+       "105      102622.0          Empty value\n",
+       "106      102621.0          Empty value\n",
+       "107      102620.0          Empty value\n",
+       "108      102619.0          Empty value\n",
+       "...           ...                  ...\n",
+       "20927    117166.0          Empty value\n",
+       "20934    117159.0          Empty value\n",
+       "20941    117152.0          Empty value\n",
+       "20965    117128.0          Empty value\n",
+       "20979    118234.0          Empty value\n",
+       "\n",
+       "[3240 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SW Support Presented\n",
+    "\n",
+    "sw_presented = df_compass[['Request ID', 'Date Presentation Created', 'SW Support Presented']].copy()\n",
+    "sw_presented = sw_presented[pd.notna(sw_presented['Date Presentation Created'])]\n",
+    "sw_presented = sw_presented[pd.isna(sw_presented['SW Support Presented'])]\n",
+    "sw_presented['SW Support Presented'] = 'Empty value'\n",
+    "sw_presented.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merge\n",
     "\n",
     "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
@@ -350,7 +540,12 @@
     "    re_duration_m, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    dat_invite_s, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    ibvalue_and_cover, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    at_interested, how='outer', left_on='Request ID', right_on='Request ID')"
+    "    at_interested, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    up_sspt, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested_sspt, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    dna_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested_st, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    sw_presented, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
@@ -361,6 +556,13 @@
    "source": [
     "final_report[final_report['Request ID'].duplicated()]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
