New errors validations included
1. Expert Care Presented
2. AT Interested (EC)
3. BCS 3.0 Presented
4. BCS - IB based
5. AT Interested (BCS)
6. IRR Presented
7. AT Interested (IRR)
8. PR Presented
9. AT Interested (PR)

All the generated tables are merged

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -395,117 +395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Request ID</th>\n",
-       "      <th>SW Support Presented</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>102669.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>102622.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>102621.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>102620.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>102619.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20927</th>\n",
-       "      <td>117166.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20934</th>\n",
-       "      <td>117159.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20941</th>\n",
-       "      <td>117152.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20965</th>\n",
-       "      <td>117128.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20979</th>\n",
-       "      <td>118234.0</td>\n",
-       "      <td>Empty value</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3240 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Request ID SW Support Presented\n",
-       "58       102669.0          Empty value\n",
-       "105      102622.0          Empty value\n",
-       "106      102621.0          Empty value\n",
-       "107      102620.0          Empty value\n",
-       "108      102619.0          Empty value\n",
-       "...           ...                  ...\n",
-       "20927    117166.0          Empty value\n",
-       "20934    117159.0          Empty value\n",
-       "20941    117152.0          Empty value\n",
-       "20965    117128.0          Empty value\n",
-       "20979    118234.0          Empty value\n",
-       "\n",
-       "[3240 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SW Support Presented\n",
     "\n",
@@ -521,7 +413,150 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# AT Interested (SW)\n",
+    "\n",
+    "at_interested_sw = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (SW)']].copy()\n",
+    "at_interested_sw = at_interested_sw[(at_interested_sw['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested_sw['AT Interested (SW)'])]\n",
+    "at_interested_sw['AT Interested (SW)'] = 'Empty value'\n",
+    "at_interested_sw.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expert Care Presented\n",
+    "\n",
+    "exp_presented = df_compass[['Request ID', 'Date Presentation Created', 'Expert Care Presented']].copy()\n",
+    "exp_presented = exp_presented[pd.notna(exp_presented['Date Presentation Created'])]\n",
+    "exp_presented = exp_presented[pd.isna(exp_presented['Expert Care Presented'])]\n",
+    "exp_presented['Expert Care Presented'] = 'Empty value'\n",
+    "exp_presented.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AT Interested (EC)\n",
+    "\n",
+    "at_interested_ec = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (EC)']].copy()\n",
+    "at_interested_ec = at_interested_ec[(at_interested_ec['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested_ec['AT Interested (EC)'])]\n",
+    "at_interested_ec['AT Interested (EC)'] = 'Empty value'\n",
+    "at_interested_ec.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BCS 3.0 Presented\n",
+    "\n",
+    "bcs3_presented = df_compass[['Request ID', 'Date Presentation Created', 'BCS 3.0 Presented']].copy()\n",
+    "bcs3_presented = bcs3_presented[pd.notna(bcs3_presented['Date Presentation Created'])]\n",
+    "bcs3_presented = bcs3_presented[pd.isna(bcs3_presented['BCS 3.0 Presented'])]\n",
+    "bcs3_presented['BCS 3.0 Presented'] = 'Empty value'\n",
+    "bcs3_presented.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BCS - IB based\n",
+    "\n",
+    "bcs_ib_bas = df_compass[['Request ID', 'Date Presentation Created', 'BCS - IB based']].copy()\n",
+    "bcs_ib_bas = bcs_ib_bas[pd.notna(bcs_ib_bas['Date Presentation Created'])]\n",
+    "bcs_ib_bas = bcs_ib_bas[pd.isna(bcs_ib_bas['BCS - IB based'])]\n",
+    "bcs_ib_bas['BCS - IB based'] = 'Empty value'\n",
+    "bcs_ib_bas.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AT Interested (BCS)\n",
+    "\n",
+    "at_interested_bcs = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (BCS)']].copy()\n",
+    "at_interested_bcs = at_interested_bcs[(at_interested_bcs['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested_bcs['AT Interested (BCS)'])]\n",
+    "at_interested_bcs['AT Interested (BCS)'] = 'Empty value'\n",
+    "at_interested_bcs.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IRR Presented\n",
+    "\n",
+    "irr_presented = df_compass[['Request ID', 'Date Presentation Created', 'IRR Presented']].copy()\n",
+    "irr_presented = irr_presented[pd.notna(irr_presented['Date Presentation Created'])]\n",
+    "irr_presented = irr_presented[pd.isna(irr_presented['IRR Presented'])]\n",
+    "irr_presented['IRR Presented'] = 'Empty value'\n",
+    "irr_presented.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AT Interested (IRR)\n",
+    "\n",
+    "at_interested_irr = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (IRR)']].copy()\n",
+    "at_interested_irr = at_interested_irr[(at_interested_irr['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested_irr['AT Interested (IRR)'])]\n",
+    "at_interested_irr['AT Interested (IRR)'] = 'Empty value'\n",
+    "at_interested_irr.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PR Presented\n",
+    "\n",
+    "pr_presented = df_compass[['Request ID', 'Date Presentation Created', 'PR Presented']].copy()\n",
+    "pr_presented = pr_presented[pd.notna(pr_presented['Date Presentation Created'])]\n",
+    "pr_presented = pr_presented[pd.isna(pr_presented['PR Presented'])]\n",
+    "pr_presented['PR Presented'] = 'Empty value'\n",
+    "pr_presented.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AT Interested (PR)\n",
+    "\n",
+    "at_interested_pr = df_compass[['Request ID', 'Readout Delivery Status', 'AT Interested (PR)']].copy()\n",
+    "at_interested_pr = at_interested_pr[(at_interested_pr['Readout Delivery Status'] == 'Complete') &\n",
+    "                pd.isnull(at_interested_pr['AT Interested (PR)'])]\n",
+    "at_interested_pr['AT Interested (PR)'] = 'Empty value'\n",
+    "at_interested_pr.drop(axis=1, columns=['Readout Delivery Status'], inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -545,7 +580,17 @@
     "    at_interested_sspt, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    dna_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "    at_interested_st, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "    sw_presented, how='outer', left_on='Request ID', right_on='Request ID')"
+    "    sw_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested_sw, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    exp_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested_ec, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    bcs3_presented, how='outer', left_on='Request ID', right_on='Request ID').merge( \n",
+    "    bcs_ib_bas, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested_bcs, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    irr_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested_irr, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    pr_presented, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "    at_interested_pr, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
